# human-dynamics-estimation

conf/app/: HumanStateVisualizer.ini
conf/xml/: HumanKinematicEstimator-iFeelSuit.xml  HumanKinematicEstimator.xml  HumanStateProvider.xml
devices/: CMakeLists.txt
devices/HumanKinematicEstimator/: CMakeLists.txt  HumanKinematicEstimator.cpp  HumanKinematicEstimator.h
devices/HumanStateProvider/: CMakeLists.txt  HumanStateProvider.cpp
devices/Utilities/: Utils.cpp
modules/HumanStateVisualizer/src/: main.cpp
